--- a/GeoCatalogQueryUI/src/app/meta-data-list/meta-data-list.component.css
+++ b/GeoCatalogQueryUI/src/app/meta-data-list/meta-data-list.component.css
@@ -27,7 +27,7 @@
 }
 
 .example-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-image: url("./../../assets/img/fileIcon.png");
   background-size: cover;
 }
 .colorfound {
